# abolladuras_radiales

./: .gitignore  CMakeLists.txt  LICENSE  README.md  caso_base_dents.txt  caso_errores_dents.txt
docs/: informe.tex
lib/pujCGAL/: IO.h  IO.hxx
scripts/: generate_gif.py
src/: DentApplier.cxx  DentApplier.h  PreprocessSurface.cxx  PreprocessSurface.h  bash_surface.cxx  build_delaunay_from_pointcloud.cxx
test/: 20260603_085046_dents.txt  base_dent.txt  generate_surface.py  generate_surface.sh  visualize.py
